<resources>
    <string name="app_name">LotterySmartApp</string>
    <string name="preferences_file">com.mobile.lotterySmart.PREFERENCE_FILE_KEY</string>
    <string name="action_settings">Settings</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo</string>
    <string name="access">Iniciar Sesión</string>
    <string name="register">¿No tienes una cuenta?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="AppTitle">Lottery smart</string>
    <string name="ForgetPassword">¿Olvidaste tu contraseña?</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="RestorePassword">Restablecer contraseña</string>
    <string name="puntos_de_venta">Puntos de venta</string>
    <string name="forgetMyPaswordTitle">Olvide mi contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="title_activity_main_menu">main_menu</string>
    <string name="navigation_drawer_open">Abrir drawer de navegacion</string>
    <string name="navigation_drawer_close">Cerrar drawer de navegacion</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="lottery_smart">Lottery Smart</string>
    <string name="tu_app_de_loter_a">Tu app de lotería</string>
    <string name="estamos_trabajando">Estamos trabajando....</string>
    <string name="todo">TODO</string>
    <string name="drawName">Nombre de Sorteo</string>
    <string name="name">Nombre</string>
    <string name="result1">1er</string>
    <string name="result2">2do</string>
    <string name="result3">3er</string>
    <string name="drawDate">Fecha de Sorteo</string>
    <string name="drawMaint">Sorteo</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="Google_Signin">Accede con Google</string>
    <string name="loterry_smart_logo">Loterry smart Logo</string>
    <string name="quiero_ser_comprador">Quiero ser cliente</string>
    <string name="tipo_de_usuario">Seleccione el tipo de usuario:</string>
    <string name="quiero_ser_vendedor">Quiero ser vendedor</string>
    <string name="bienvenido_a_lottery_smart">Bienvenido a Lottery Smart</string>
    <string name="podr_s_registrar_tu_puesto_de_loter_a_reservar_n_meros_para_tus_clientes_y_mucho_m_s">Podrás registrar tu puesto de lotería, reservar números para tus clientes y ¡mucho más!</string>
    <string name="guardar">Guardar</string>
    <string name="atr_s">Atrás</string>
    <string name="registrar_vendedor">Registrar vendedor</string>
    <string name="la_contrase_a_debe_contener_m_s_de_6_caracteres">**La contraseña debe contener más de 6 caracteres.</string>
    <string name="su_ubicaci_n">Su ubicación:</string>
    <string name="modificar_informaci_n">Modificar información</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="modificar_perfil">Guardar</string>
    <string name="sellerLottery">Lotería de Vendedor</string>
    <string name="seriesNumber">Número de Serie</string>
    <string name="ubicaci_n_de_su_puesto">Ubicación de su puesto</string>
    <string name="draw">Sorteo</string>
    <string name="title_activity_seller_address">Map</string>
    <string name="buscar_n_mero">Buscar número</string>
    <string name="buscar">Buscar</string>
    <string name="seleccionar_rango">Seleccionar rango</string>
    <string name="_0_km">0 km</string>
    <string name="n_meros_ganadores">Números ganadores</string>
    <string name="loteria_vendedor">Loteria vendedor</string>
    <string name="perfil">Perfil</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="bienvenid">¡Bienvenid@!</string>
    <string name="numero">numero</string>
    <string name="n_mero_m_s_buscado">Número más buscado:</string>
    <string name="reserve">Reservar</string>
    <string name="available">Disponible:</string>
    <string name="n_meros_reservados">Números reservados</string>
    <string name="buyer">Comprador:</string>
    <string name="date">Fecha:</string>
    <string name="serie">Serie:</string>
    <string name="number">Número:</string>
    <string name="sell">Vender</string>
    <string name="logout">logoutTitleStrng</string>
    <string name="agregar_n_meros_ganadores">Agregar números ganadores</string>
    <string name="delete_draw">Eliminar Sorteo</string>
    <string name="delete">Eliminar</string>
    <string name="returnFractions">Devolver Reserva</string>
    <string name="segundo_premio">Segundo Premio</string>
    <string name="primer_premio">Primer Premio</string>
    <string name="tercer_premio">Tercer Premio</string>
</resources>