<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/list_winners"
            android:icon="@drawable/list_winners"
            android:title="@string/n_meros_ganadores" />

        <item
            android:id="@+id/list_sellerLottery"
            android:icon="@drawable/list_winners"
            android:title="@string/loteria_vendedor" />

        <item
            android:id="@+id/list_reservedNumbers"
            android:icon="@drawable/list_winners"
            android:title="@string/n_meros_reservados" />
    </group>

    <item android:title="@string/perfil">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/icon_profile"
                    android:title="@string/mi_perfil" />

                <item
                    android:id="@+id/log_out"
                    android:icon="@drawable/log_out_icon"
                    android:title="@string/cerrar_sesi_n" />

            </group>
        </menu>
    </item>

</menu>